--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "xel/psr7bridge": "0.1.4",
         "psr/http-server-middleware": "^1.0",
       "ext-pdo": "*",
-        "xel/orm": "^1.0"
+        "xel/orm": "^1.0",
+      "ext-openssl": "*"
     },
     "scripts": {
         "analyse": "phpstan analyse"
